# hello-actions

./: CMakeLists.txt  README.md  main.cpp  pyproject.toml  test.py
.ci/: run_clang_format.sh
.github/workflows/: build.yml  ci.yml  comments.yml  docker.yml  events.yaml  glslang.yml  pr_comment.yml  python.yml  style.yml  style_check.yml  style_check_comment.yml  style_fix.yml  test.yml  test_needs_always.yaml
