[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "moritz-h-hello-actions"
version = "0.1.0"
description = "A python test package"
readme = "README.md"
requires-python = ">=3.9"

[tool.scikit-build]
cmake.minimum-version = "3.27.0"
ninja.minimum-version = "1.11"

cmake.build-type = "Release"
